--- a/css/estilo.css
+++ b/css/estilo.css
@@ -38,7 +38,8 @@ header{
 }
 
 #perfil {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
     max-width: 1200px;
     margin: 0 auto;
     padding: 35px 20px;
@@ -52,6 +53,7 @@ header{
 }
 
 #perfil-dados h2{
+    font-size: 2rem;
     margin-bottom: 0px;
     padding-bottom: 0px;
 }
@@ -63,14 +65,16 @@ header{
 }
 
 #projetos{
-    display: flex;
+    display: grid;
     max-width: 1200px;
     margin: 0 auto;
     gap: 110px;
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
 }
 
 #projetos h2{
-    font-size: 8rem;
+    font-size: 10rem;
     line-height: 1;
     text-transform: uppercase;
     word-break: break-all;
@@ -79,5 +83,92 @@ header{
     
 }
 
+.principal-destaque {
+    font-weight: bold;
+    background: blue;
+    padding: 4px;
+    border-radius: 2px 6px;
+    color: white;
+}
 
+#projetos-texto-principal {
+    line-height: 1.8;
+    font-size: 1.4rem;
+}
+
+#projetos-lista{
+    background: #023e73;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    color: #fff;
+    padding: 20px;
+    gap: 20px;
+    border-radius: 4px;
+    margin-top: 15px;
+}
+
+#projetos-lista h3{
+    margin: 0;
+    padding: 0;
+    font-size: 1.2rem;
+}
+
+#projetos-lista p{
+    margin: 0;
+    padding: 0;
+    color: #b9b8b8;
+}
+
+#projetos h3{
+    margin: 0;
+    padding: 0;
+    font-size: 1.2rem;
+}
+
+#projetos-tags {
+    padding: 0;
+    list-style-type: none;
+    margin: 0;
+    display: flex;
+    gap: 10px;
+    align-items: start;
+    flex-wrap: wrap;
+}
+
+#projetos-tags li{
+    background-color: #fff;
+    color: #023e73;
+    border-radius: 4px;
+    padding: 5px 8px;
+    line-height: 1.4;
+
+}
+/* sessao projetos - final */
+
+/* sessao cursos - inicio */
+
+#cursos{
+    /* display: grid;
+    grid-template-columns: 1fr 2fr; */
+    background-color: #023e73;
+    margin-top: 50px;
+    /* height: 300px;
+    margin-top: 50px; */
+}
+
+#cursos-grid {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    max-width: 1200px;
+    margin: 0 auto;
+    gap: 110px;
+}
+
+#cursos-grid h2 {
+    color: #fff;
+    font-size: 8rem;
+    word-break: break-all;
+    max-width: 4ch;
+    text-transform: uppercase;
+}
 
