--- a/css/estilo.css
+++ b/css/estilo.css
@@ -293,6 +293,7 @@ footer {
     font-weight: bold;
     border: none;
     border-radius: 4px;
+    cursor: pointer;
 }
 
 #footer-conteudo h2 {
@@ -300,6 +301,7 @@ footer {
     text-transform: uppercase;
     text-align: center;
     color: #202D73;
+    letter-spacing: 1.2rem;
 }
 
 #footer-inferior {
@@ -344,6 +346,27 @@ footer {
     font-size: 1.2rem;
 }
 
+#msg {
+    width: 100%;
+    height: 180px;
+    margin-top: 20px;
+    padding: 12px 20px;
+    border: 1px solid #202c73;
+    border-radius: 4px;
+}
 
+#form-aviso {
+    padding: 0;
+    margin: 0;
+    font-size: 12px;
+    color: #6e6d6d;
+}
 
+.borda-erro{
+    
+}
+
+.borda-original{
+
+}
 /* final css footer */
