--- a/css/estilo.css
+++ b/css/estilo.css
@@ -472,17 +472,16 @@ footer {
         text-align: center;
     }
 
-    .alinhhar-direita{
+    .alinhar-direita{
         text-align: center;
-    }
-    .alinhar-centro{
-        text-align: center;
-
     }
 
     .alinhar-esquerda{
         text-align: center;
     }
+  
+     
+ 
 
 }
 
