--- a/css/estilo.css
+++ b/css/estilo.css
@@ -431,6 +431,9 @@ footer {
         max-width: 100%;
     }
 
+    #cursos{
+        margin-top: 15px;
+    }
 
     #cursos-grid {
         width: 100%;
