--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,7 @@
 *{
     box-sizing: border-box;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background color: ;
 }
 
 html{
